src/objects/PBS_TML_Question__c.object
<CustomObject>
    <description>Question template. Records in this object can be used to import questions to Question Lines</description>
    <fields>
        <fullName>Correct_Boolean__c</fullName>
        <label>Correct Boolean</label>
        <picklist>
            <picklistValues>
                <fullName>true</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>false</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Correct_Number__c</fullName>
        <label>Correct Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description_RTA__c</fullName>
        <label>Description RTA</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TML_Answer_Sequence__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>TML Answer Sequence</label>
        <referenceTo>PBS_TML_Answer_Sequence__c</referenceTo>
        <relationshipName>TML_Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Text</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SelectOneQuestion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SelectMultipleQuestion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boolean</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>PBS_TML Question</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TLQ-{0000000}</displayFormat>
        <label>TML Question ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PBS_TML Questions</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>AnswerSequence_Required</fullName>
        <active>true</active>
        <description>Display an error message when a type that requires an answer sequence chose and no answer sequence is defined</description>
        <errorConditionFormula>(TEXT( Type__c )==&quot;SelectOneQuestion&quot; || TEXT( Type__c )==&quot;SelectMultipleQuestion&quot;) &amp;&amp;  ISBLANK(TML_Answer_Sequence__c)</errorConditionFormula>
        <errorMessage>You must specify an answer sequence for this type of question</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CorrectBoolean_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(TEXT(Correct_Boolean__c)) &amp;&amp;  TEXT(Type__c) == &quot;Boolean&quot;</errorConditionFormula>
        <errorMessage>You must specify a correct boolean value when defining a Boolean type of question</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CorrectNumber_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(TEXT(Correct_Number__c)) &amp;&amp; TEXT(Type__c) == &quot;Number&quot;</errorConditionFormula>
        <errorMessage>You must specify a correct number value when defining a Number type of question</errorMessage>
    </validationRules>
</CustomObject>